--- a/docker/Dockerfile.jenkins
+++ b/docker/Dockerfile.jenkins
@@ -11,7 +11,7 @@ ARG ANDROID_SDK_URL="https://dl.google.com/android/repository/sdk-tools-linux-43
 # Android NDK r18b
 ARG ANDROID_NDK_URL="https://dl.google.com/android/repository/android-ndk-r18b-linux-x86_64.zip"
 
-ARG SDKMANAGER_PACKAGES="build-tools;27.0.3 platforms;android-26 cmake;3.6.4111459 system-images;android-24;default;x86_64 emulator platform-tools platforms;android-28"
+ARG SDKMANAGER_PACKAGES="build-tools;27.0.3 platforms;android-26 cmake;3.6.4111459 system-images;android-24;default;x86_64 emulator platform-tools"
 
 
 # Arguments, Environment
@@ -115,3 +115,5 @@ RUN if [ ! -z "$SDKMANAGER_PACKAGES" ]; then yes | $_SDKMANAGER $SDKMANAGER_PACK
 #       We still use it here to ensure that these settings
 #       are respected, no matter what is configured elsewhere.
 ENV _JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+
+RUN yes | $_SDKMANAGER --licenses
