--- a/docker/Dockerfile.jenkins
+++ b/docker/Dockerfile.jenkins
@@ -44,6 +44,7 @@ ARG _SDKMANAGER=$ANDROID_SDK_ROOT/tools/bin/sdkmanager
 RUN apt-get update && apt-get install -y --no-install-recommends \
         curl \
         openssh-client \
+        x11-commons \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Fastlane
