--- a/docker/Dockerfile.jenkins
+++ b/docker/Dockerfile.jenkins
@@ -45,6 +45,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         curl \
         openssh-client \
         x11-common \
+        x11-utils \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Fastlane
